# BoundML

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
boundml/: __init__.py  dataset_generator.py  environments.py  evaluation_tools.py  observers.py  output_control.py  solver_evaluation_results.py  solvers.py  utils.py
boundml/components/: __init__.py  branching_components.py  components.py  conditional_component.py  ecole_component.py  gnn_component.py
boundml/core/: branchrule.py  observer.py  utils.py
boundml/evaluation/: __init__.py  evaluation_tools.py  solver_evaluation_results.py
boundml/instances/: __init__.py  ecole_instances.py  folder_instances.py  instances.py  miplib.py
boundml/ml/: __init__.py  branching_dataset_generator.py  dataset_generator.py  model.py
boundml/observers/: __init__.py  gnn_observer.py  observers.py
boundml/solvers/: __init__.py  modular_solver.py  solvers.py
example/: branching_strategy.py  gnn_pipeline.py  miplib.py
test/: __init__.py  test.py  test_components.py  test_core.py  test_evaluation.py  test_solvers.py  utils.py
