[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boundml"
version = "1.2.1"
authors = [
    { name="Simon Renard", email="simon.renard@ulb.be" },
]
description = "BoundML is a toolbox to evaluate and compare branch and bound solvers. It allows to easily develop and compare new machine learning based (or not) branching strategies for the Branch and Bound."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "appdirs",
    "ecole-fork",
    "pyscipopt",
    "pathos",
    "dill",
    "torch",
    "torchvision",
    "torchaudio",
    "torch_geometric",
    "matplotlib",
    "pandas",
    "tabulate"
]

[project.urls]
Homepage = "https://github.com/sirenard/BoundML"